Import and use most of svg files for side bar
The side bar is cleaned up and is almost done. The side bar is also
turned into a static size in order to prevent it from shrinking too
small or growing too large.

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <div class="sidebar">
-        <p>Dashboard</p>
+        <a href="#"><img src="svg-icons/dashboard-icon.svg">Dashboard</a>
         <ul>
-            <li><a>Home</a></li>
-            <li><img src="" alt=""><a>Profile</a></li>
-            <li><img src="" alt=""><a>Messages</a></li>
-            <li><img src="" alt=""><a>History</a></li>
-            <li><img src="" alt=""><a>Tasks</a></li>
-            <li><img src="" alt=""><a>Communities</a></li>
+            <li><a href="#"><img src="svg-icons/home-icon.svg"><strong>Home</strong></a></li>
+            <li><a href="#"><img src="svg-icons/account-icon.svg"><strong>Profile</strong></a></li>
+            <li><a href="#"><img src="svg-icons/chat-icon.svg"><strong>Messages</strong></a></li>
+            <li><a href="#"><img src="svg-icons/history-icon.svg"><strong>History</strong></a></li>
+            <li><a href="#"><img src="svg-icons/task-icon.svg"><strong>Tasks</strong></a></li>
+            <li><a href="#"><img src="svg-icons/groups-icon.svg"><strong>Communities</strong></a></li>
         </ul>
 
         <ul>
-            <li><img src="" alt=""><a>Settings</a></li>
-            <li><img src="" alt=""><a>Support</a></li>
-            <li><img src="" alt=""><a>Privacy</a></li>
+            <li><a href="#"><img src="svg-icons/settings-icon.svg"><strong>Settings</strong></a></li>
+            <li><a href="#"><img src="svg-icons/help-icon.svg"><strong>Support</strong></a></li>
+            <li><a href="#"><img src="svg-icons/security-icon.svg" ><strong>Privacy</strong></a></li>
         </ul>
     </div>
     <div class="header">
