Style the first section of the header
The portion of the header where the search bar is located is styled.
Along with that, most of the basic information that was required in
the html is added. This includes some content from the main section as
well.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,47 @@
             <li><a href="#"><img src="svg-icons/security-icon.svg" ><strong>Privacy</strong></a></li>
         </ul>
     </div>
-    <div class="header">
+    <header>
+        <div class="top-left">
+            <img src="svg-icons/search-icon.svg">
+            <input type="search">
+            <img src="svg-icons/notification-icon.svg">
+        </div>
+        <div class="header-user"><img src=""> Lorem Ipsum</div>
+        
+        <div class="head-main">
+            <img src="" alt="">
+            <p>hi there,</p>
+            <p class="welcome-user">Lorem Ipsum (@loremipsum)</p>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
+    </header>
 
-    </div>
     <main>
+        Your Projects
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        Announcements
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        Trending
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </main>
 </body>
 </html>
