Style top-right part of header

--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
     </div>
     <header>
         <div class="top-left">
-            <img src="svg-icons/search-icon.svg">
-            <input type="search">
+            <label for="search"><img src="svg-icons/search-icon.svg"></label>
+            <input type="search" id="search" name="search">
             <img src="svg-icons/notification-icon.svg">
         </div>
-        <div class="header-user"><img src=""> Lorem Ipsum</div>
+        <div class="header-user">
+            <img src="./profile-picture.jpg" class="user-pfp">
+             <p class="center-i">Mr. Person</p>
+        </div>
         
         <div class="head-main">
-            <img src="" alt="">
+            <img src="./profile-picture.jpg" class="user-pfp">
             <p>hi there,</p>
-            <p class="welcome-user">Lorem Ipsum (@loremipsum)</p>
+            <p class="welcome-user">Mr. Person (@coolperson)</p>
             <button>New</button>
             <button>Upload</button>
             <button>Share</button>
