--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         
         <div class="head-main">
             <img src="./profile-picture.jpg" class="user-pfp">
-            <p>hi there,</p>
-            <p class="welcome-user">Mr. Person (@coolperson)</p>
+            <div class="welcome-user">
+                <p>hi there,</p>
+                <p>Mr. Person (@coolperson)</p>
+            </div>
+            
             <button>New</button>
             <button>Upload</button>
             <button>Share</button>
@@ -47,7 +50,7 @@
     </header>
 
     <main>
-        Your Projects
+        <!-- Your Projects
         <div>
             <div></div>
             <div></div>
@@ -68,7 +71,7 @@
             <div></div>
             <div></div>
             <div></div>
-        </div>
+        </div> -->
     </main>
 </body>
 </html>
