Add html for main content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="top-left">
             <label for="search"><img src="svg-icons/search-icon.svg"></label>
-            <input type="search" id="search" name="search">
+            <input type="search" id="search" name="search" placeholder="Search">
             <img src="svg-icons/notification-icon.svg">
         </div>
         <div class="header-user">
@@ -50,28 +50,78 @@
     </header>
 
     <main>
-        <!-- Your Projects
-        <div>
+        <div class="projects">
+            <p>Your Projects</p>
+            <div>
+                <div class="color"></div>
+                <div class="container">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem</p>
+                    <img src="svg-icons/star-icon.svg">
+                    <img src="svg-icons/eye-icon.svg">
+                    <img src="svg-icons/branch-icon.svg">
+                </div>
+            </div>
+            <div>
+                <div class="color"></div>
+                <div class="container">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem</p>
+                    <img src="svg-icons/star-icon.svg">
+                    <img src="svg-icons/eye-icon.svg">
+                    <img src="svg-icons/branch-icon.svg">
+                </div>
+            </div><div>
+                <div class="color"></div>
+                <div class="container">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem</p>
+                    <img src="svg-icons/star-icon.svg">
+                    <img src="svg-icons/eye-icon.svg">
+                    <img src="svg-icons/branch-icon.svg">
+                </div>
+            </div><div>
+                <div class="color"></div>
+                <div class="container">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem</p>
+                    <img src="svg-icons/star-icon.svg">
+                    <img src="svg-icons/eye-icon.svg">
+                    <img src="svg-icons/branch-icon.svg">
+                </div>
+            </div><div>
+                <div class="color"></div>
+                <div class="container">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem</p>
+                    <img src="svg-icons/star-icon.svg">
+                    <img src="svg-icons/eye-icon.svg">
+                    <img src="svg-icons/branch-icon.svg">
+                </div>
+            </div><div>
+                <div class="color"></div>
+                <div class="container">
+                    <h5>Super Cool Project</h5>
+                    <p>Lorem</p>
+                    <img src="svg-icons/star-icon.svg">
+                    <img src="svg-icons/eye-icon.svg">
+                    <img src="svg-icons/branch-icon.svg">
+                </div>
+            </div>
+        </div>
+        <div class="announcements">
+            <p>Announcements</p>
             <div></div>
             <div></div>
+            <div></div>
+        </div>
+        <div class="trending">
+            <p>Trending</p>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
         </div>
-        Announcements
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        Trending
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div> -->
     </main>
 </body>
 </html>
