Style project boxes
The "your projects" section is styled and modified using grid. The grid
automatically adds and removes columns depending on the user's screen
size. The dashboard text and logo in the sidebar is now bigger in order
to make it stand out from the rest.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="#"><img src="svg-icons/dashboard-icon.svg">Dashboard</a>
+        <a href="#" class="bigger"><img src="svg-icons/dashboard-icon.svg" class="big-img">Dashboard</a>
         <ul>
             <li><a href="#"><img src="svg-icons/home-icon.svg"><strong>Home</strong></a></li>
             <li><a href="#"><img src="svg-icons/account-icon.svg"><strong>Profile</strong></a></li>
@@ -56,7 +56,7 @@
                 <div class="color"></div>
                 <div class="container">
                     <h5>Super Cool Project</h5>
-                    <p>Lorem</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
                     <img src="svg-icons/branch-icon.svg">
@@ -66,7 +66,7 @@
                 <div class="color"></div>
                 <div class="container">
                     <h5>Super Cool Project</h5>
-                    <p>Lorem</p>
+                    <p>Sed blandit libero volutpat sed. At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Ultrices gravida dictum fusce ut placerat.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
                     <img src="svg-icons/branch-icon.svg">
@@ -75,7 +75,7 @@
                 <div class="color"></div>
                 <div class="container">
                     <h5>Super Cool Project</h5>
-                    <p>Lorem</p>
+                    <p>Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Odio ut sem nulla pharetra diam.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
                     <img src="svg-icons/branch-icon.svg">
@@ -84,7 +84,7 @@
                 <div class="color"></div>
                 <div class="container">
                     <h5>Super Cool Project</h5>
-                    <p>Lorem</p>
+                    <p>Aliquam ultrices sagittis orci a scelerisque purus semper eget. Magnis dis parturient montes nascetur ridiculus. Sagittis vitae et leo duis ut diam quam.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
                     <img src="svg-icons/branch-icon.svg">
@@ -93,7 +93,7 @@
                 <div class="color"></div>
                 <div class="container">
                     <h5>Super Cool Project</h5>
-                    <p>Lorem</p>
+                    <p>Felis donec et odio pellentesque diam volutpat commodo sed egestas. Sem nulla pharetra diam sit amet nisl. Mattis nunc sed blandit libero volutpat sed.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
                     <img src="svg-icons/branch-icon.svg">
@@ -102,7 +102,7 @@
                 <div class="color"></div>
                 <div class="container">
                     <h5>Super Cool Project</h5>
-                    <p>Lorem</p>
+                    <p>Ut placerat orci nulla pellentesque dignissim enim sit amet venenatis. Tempor orci eu lobortis elementum nibh tellus molestie.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
                     <img src="svg-icons/branch-icon.svg">
