Style announcements part
The announcements is given a white background so it stands out from
the background. It is also given rounded corners, and some lorem text.
A line is shown in between each post in announcements in order to make
it easier for the user to be able to easily spot each separate post.
The text is given a grey color, and the title is bold.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div>
                 <div class="color"></div>
                 <div class="container">
-                    <h5>Super Cool Project</h5>
+                    <h5>Less Cool Project</h5>
                     <p>Sed blandit libero volutpat sed. At erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Ultrices gravida dictum fusce ut placerat.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
@@ -74,7 +74,7 @@
             </div><div>
                 <div class="color"></div>
                 <div class="container">
-                    <h5>Super Cool Project</h5>
+                    <h5>Impossible App</h5>
                     <p>Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Odio ut sem nulla pharetra diam.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
@@ -83,7 +83,7 @@
             </div><div>
                 <div class="color"></div>
                 <div class="container">
-                    <h5>Super Cool Project</h5>
+                    <h5>Easy Peasy App</h5>
                     <p>Aliquam ultrices sagittis orci a scelerisque purus semper eget. Magnis dis parturient montes nascetur ridiculus. Sagittis vitae et leo duis ut diam quam.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
@@ -92,7 +92,7 @@
             </div><div>
                 <div class="color"></div>
                 <div class="container">
-                    <h5>Super Cool Project</h5>
+                    <h5>Ad Blocker</h5>
                     <p>Felis donec et odio pellentesque diam volutpat commodo sed egestas. Sem nulla pharetra diam sit amet nisl. Mattis nunc sed blandit libero volutpat sed.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
@@ -101,7 +101,7 @@
             </div><div>
                 <div class="color"></div>
                 <div class="container">
-                    <h5>Super Cool Project</h5>
+                    <h5>Calculator App</h5>
                     <p>Ut placerat orci nulla pellentesque dignissim enim sit amet venenatis. Tempor orci eu lobortis elementum nibh tellus molestie.</p>
                     <img src="svg-icons/star-icon.svg">
                     <img src="svg-icons/eye-icon.svg">
@@ -111,13 +111,26 @@
         </div>
         <div class="announcements">
             <p>Announcements</p>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <div>
+                    <h6><strong>Site Maintenance</strong></h6>
+                    <p>Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Maecenas.</p>
+                </div>
+                <div class="line-style">
+                    <h6><strong>Community Share Day</strong></h6>
+                    <p>Diam in arcu cursus euismod quis viverra nibh. Vitae aliquet nec.</p>
+                </div>
+                <div>
+                    <h6><strong>Updated Privacy Policy</strong></h6>
+                    <p>Eget nullam non nisi est. Urna molestie at elementum eu.</p>
+                </div>    
+            </div>
         </div>
         <div class="trending">
             <p>Trending</p>
-            <div></div>
+            <div>
+                
+            </div>
             <div></div>
             <div></div>
             <div></div>
