Finish styling trending and add last changed
Besides a few changes that may come up here and there, the project is
complete.

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <img src="svg-icons/notification-icon.svg">
         </div>
         <div class="header-user">
-            <img src="./profile-picture.jpg" class="user-pfp">
+            <img src="profiles/pfp-main.jpg" class="user-pfp">
              <p class="center-i">Mr. Person</p>
         </div>
         
         <div class="head-main">
-            <img src="./profile-picture.jpg" class="user-pfp">
+            <img src="profiles/pfp-main.jpg" class="user-pfp">
             <div class="welcome-user">
                 <p>hi there,</p>
                 <p>Mr. Person (@coolperson)</p>
@@ -109,31 +109,49 @@
                 </div>
             </div>
         </div>
-        <div class="announcements">
-            <p>Announcements</p>
-            <div>
+        <div>
+            <div class="announcements">
+                <p>Announcements</p>
                 <div>
-                    <h6><strong>Site Maintenance</strong></h6>
-                    <p>Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Maecenas.</p>
+                    <div>
+                        <h6><strong>Site Maintenance</strong></h6>
+                        <p>Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Maecenas.</p>
+                    </div>
+                    <div class="line-style">
+                        <h6><strong>Community Share Day</strong></h6>
+                        <p>Diam in arcu cursus euismod quis viverra nibh. Vitae aliquet nec.</p>
+                    </div>
+                    <div>
+                        <h6><strong>Updated Privacy Policy</strong></h6>
+                        <p>Eget nullam non nisi est. Urna molestie at elementum eu.</p>
+                    </div>    
                 </div>
-                <div class="line-style">
-                    <h6><strong>Community Share Day</strong></h6>
-                    <p>Diam in arcu cursus euismod quis viverra nibh. Vitae aliquet nec.</p>
-                </div>
+            </div>
+            <div class="trending">
+                <p>Trending</p>
                 <div>
-                    <h6><strong>Updated Privacy Policy</strong></h6>
-                    <p>Eget nullam non nisi est. Urna molestie at elementum eu.</p>
-                </div>    
-            </div>
-        </div>
-        <div class="trending">
-            <p>Trending</p>
-            <div>
-                
-            </div>
-            <div></div>
-            <div></div>
-            <div></div>
+                    <div>
+                        <img src="profiles/pfp-1.jpg">
+                        <p>@flashyboy</p>
+                        <p class="user-desc">World Peace Maker</p>
+                    </div>
+                    <div class="line-style line-remove pads">
+                        <img src="profiles/pfp-main.jpg">
+                        <p>@coolperson</p>
+                        <p class="user-desc">Super Cool Project</p>
+                    </div>
+                    <div class="line-style pads">
+                        <img src="profiles/pfp-2.jpg">
+                        <p>@dirtyman</p>
+                        <p class="user-desc">Life Changing App</p>
+                    </div>
+                    <div>
+                        <img src="profiles/pfp-3.jpg">
+                        <p>@sand</p>
+                        <p class="user-desc">No Traffic Maker</p>
+                    </div>
+                </div>
+            </div>    
         </div>
     </main>
 </body>
